--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,350 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./scss/main.scss">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rest Countries API</title>
+    <link rel="stylesheet" href="./scss/main.scss" />
     <script defer src="./js/main.js"></script>
-</head>
-<body class="dark">
-    <main>
-        <header>
-            <h1>Where in the world?</h1>
-            <button>Dark mode</button>
-        </header>
-        <div>
-            <label for="searchCountries">Search country</label>
-            <input type="search" name="searchCountries" id="searchCountries">
-            <label for="filterCountries">Filter by Region</label>
-            <select name="filterCountries" id="filterCountries">
-                <option value="">Filter by Region</option>
-                <option value="africa">Africa</option>
-                <option value="america">America</option>
-                <option value="asia">Asia</option>
-                <option value="europe">Europe</option>
-                <option value="oceania">Oceania</option>
-            </select>
+  </head>
+  <body>
+    <header class="header">
+      <h1 class="header__title">Where in the world?</h1>
+      <button class="header__changeThemeBtn">
+        <ion-icon
+          class="header__changeThemeBtnIcon"
+          name="moon-outline"
+        ></ion-icon>
+        <!-- <ion-icon name="moon"></ion-icon> -->
+        Dark mode
+      </button>
+    </header>
+    <main class="main">
+      <article class="main__home">
+        <div class="main__homeInputs">
+          <fieldset class="field">
+            <label class="field__label" for="searchCountries"
+              >Search country</label
+            >
+            <ion-icon class="field__searchIcon" name="search"></ion-icon>
+            <input
+              class="field__searchInput"
+              type="search"
+              name="searchCountries"
+              id="searchCountries"
+              placeholder="Search for the country..."
+            />
+          </fieldset>
+          <fieldset class="field">
+            <label class="field__label" for="filterCountries"
+              >Filter by Region</label
+            >
+            <div role="select" class="field__filter">
+              <button class="field__filterSelect">Filter by Region</button>
+              <ul class="field__filterUl field__filterUl--hide">
+                <li class="field__filterLi">
+                  <button role="radio" class="field__filterBtn">Africa</button>
+                </li>
+                <li class="field__filterLi">
+                  <button role="radio" class="field__filterBtn">America</button>
+                </li>
+                <li class="field__filterLi">
+                  <button role="radio" class="field__filterBtn">Asia</button>
+                </li>
+                <li class="field__filterLi">
+                  <button role="radio" class="field__filterBtn">Europe</button>
+                </li>
+                <li class="field__filterLi">
+                  <button role="radio" class="field__filterBtn">Oceania</button>
+                </li>
+              </ul>
+            </div>
+          </fieldset>
         </div>
-        <article>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </article>
+        <!-- <div class="main__homeContent">
+          <div tabindex="0" class="country">
+            <img
+              class="country__flag"
+              src="./Flag_of_Germany.svg.webp"
+              alt=""
+            />
+            <article class="country__infoContainer">
+              <h2 class="country__name">Germany</h2>
+              <p class="country__info">
+                Population:
+                <span class="country__population country__infoData">
+                  81,770,900
+                </span>
+              </p>
+              <p class="country__info">
+                Region:
+                <span class="country__region country__infoData"> Europe </span>
+              </p>
+              <p class="country__info">
+                Capital:
+                <span class="country__capital country__infoData"> Berlin </span>
+              </p>
+            </article>
+          </div>
+          <div tabindex="0" class="country">
+            <img
+              class="country__flag"
+              src="./Flag_of_Germany.svg.webp"
+              alt=""
+            />
+            <article class="country__infoContainer">
+              <h2 class="country__name">Germany</h2>
+              <p class="country__info">
+                Population:
+                <span class="country__population country__infoData">
+                  81,770,900
+                </span>
+              </p>
+              <p class="country__info">
+                Region:
+                <span class="country__region country__infoData"> Europe </span>
+              </p>
+              <p class="country__info">
+                Capital:
+                <span class="country__capital country__infoData"> Berlin </span>
+              </p>
+            </article>
+          </div>
+          <div tabindex="0" class="country">
+            <img
+              class="country__flag"
+              src="./Flag_of_Germany.svg.webp"
+              alt=""
+            />
+            <article class="country__infoContainer">
+              <h2 class="country__name">Germany</h2>
+              <p class="country__info">
+                Population:
+                <span class="country__population country__infoData">
+                  81,770,900
+                </span>
+              </p>
+              <p class="country__info">
+                Region:
+                <span class="country__region country__infoData"> Europe </span>
+              </p>
+              <p class="country__info">
+                Capital:
+                <span class="country__capital country__infoData"> Berlin </span>
+              </p>
+            </article>
+          </div>
+          <div tabindex="0" class="country">
+            <img
+              class="country__flag"
+              src="./Flag_of_Germany.svg.webp"
+              alt=""
+            />
+            <article class="country__infoContainer">
+              <h2 class="country__name">Germany</h2>
+              <p class="country__info">
+                Population:
+                <span class="country__population country__infoData">
+                  81,770,900
+                </span>
+              </p>
+              <p class="country__info">
+                Region:
+                <span class="country__region country__infoData"> Europe </span>
+              </p>
+              <p class="country__info">
+                Capital:
+                <span class="country__capital country__infoData"> Berlin </span>
+              </p>
+            </article>
+          </div>
+          <div tabindex="0" class="country">
+            <img
+              class="country__flag"
+              src="./Flag_of_Germany.svg.webp"
+              alt=""
+            />
+            <article class="country__infoContainer">
+              <h2 class="country__name">Germany</h2>
+              <p class="country__info">
+                Population:
+                <span class="country__population country__infoData">
+                  81,770,900
+                </span>
+              </p>
+              <p class="country__info">
+                Region:
+                <span class="country__region country__infoData"> Europe </span>
+              </p>
+              <p class="country__info">
+                Capital:
+                <span class="country__capital country__infoData"> Berlin </span>
+              </p>
+            </article>
+          </div>
+          <div tabindex="0" class="country">
+            <img
+              class="country__flag"
+              src="./Flag_of_Germany.svg.webp"
+              alt=""
+            />
+            <article class="country__infoContainer">
+              <h2 class="country__name">Germany</h2>
+              <p class="country__info">
+                Population:
+                <span class="country__population country__infoData">
+                  81,770,900
+                </span>
+              </p>
+              <p class="country__info">
+                Region:
+                <span class="country__region country__infoData"> Europe </span>
+              </p>
+              <p class="country__info">
+                Capital:
+                <span class="country__capital country__infoData"> Berlin </span>
+              </p>
+            </article>
+          </div>
+          <div tabindex="0" class="country">
+            <img
+              class="country__flag"
+              src="./Flag_of_Germany.svg.webp"
+              alt=""
+            />
+            <article class="country__infoContainer">
+              <h2 class="country__name">Germany</h2>
+              <p class="country__info">
+                Population:
+                <span class="country__population country__infoData">
+                  81,770,900
+                </span>
+              </p>
+              <p class="country__info">
+                Region:
+                <span class="country__region country__infoData"> Europe </span>
+              </p>
+              <p class="country__info">
+                Capital:
+                <span class="country__capital country__infoData"> Berlin </span>
+              </p>
+            </article>
+          </div>
+          <div tabindex="0" class="country">
+            <img
+              class="country__flag"
+              src="./Flag_of_Germany.svg.webp"
+              alt=""
+            />
+            <article class="country__infoContainer">
+              <h2 class="country__name">Germany</h2>
+              <p class="country__info">
+                Population:
+                <span class="country__population country__infoData">
+                  81,770,900
+                </span>
+              </p>
+              <p class="country__info">
+                Region:
+                <span class="country__region country__infoData"> Europe </span>
+              </p>
+              <p class="country__info">
+                Capital:
+                <span class="country__capital country__infoData"> Berlin </span>
+              </p>
+            </article>
+          </div>
+        </div> -->
+      </article>
+      <article class="main__details main__details--hide">
+        <button class="main__detailsBackBtn">
+          <ion-icon
+            class="main__detailsBackBtnIcon"
+            name="arrow-back"
+          ></ion-icon>
+          Back
+        </button>
+        <div class="details">
+          <img class="details__img" src="./Flag_of_Germany.svg.webp" alt="" />
+          <div class="details__data">
+            <header class="details__header">
+              <h2 class="details__name country__name">Germany</h2>
+            </header>
+            <article class="details__info">
+              <div>
+                <p class="country__info">
+                  Native Name:
+                  <span class="country__nativeName country__infoData"
+                    >Deutschland</span
+                  >
+                </p>
+                <p class="country__info">
+                  Population:
+                  <span class="country__population country__infoData"
+                    >81,770,900</span
+                  >
+                </p>
+                <p class="country__info">
+                  Region:
+                  <span class="country__region country__infoData">Europe</span>
+                </p>
+                <p class="country__info">
+                  Sub Region:
+                  <span class="country__subRegion country__infoData"
+                    >Western Europe</span
+                  >
+                </p>
+                <p class="country__info">
+                  Capital:
+                  <span class="country__capital country__infoData">Berlin</span>
+                </p>
+              </div>
+              <div>
+                <p class="country__info">
+                  Top Level Domain:
+                  <span class="country__domain country__infoData">.de</span>
+                </p>
+                <p class="country__info">
+                  Currencies:
+                  <span class="country__currencies country__infoData"
+                    >Euro</span
+                  >
+                </p>
+                <p class="country__info">
+                  Languages:
+                  <span class="country__languages country__infoData"
+                    >German, German, German</span
+                  >
+                </p>
+              </div>
+            </article>
+            <section class="details__borderCountries">
+              <h3 class="details__borderCountriesTitle">Border Countries:</h3>
+              <div class="details__borderCountriesBtns">
+                <button class="details__borderCountryBtn">Poland</button>
+                <button class="details__borderCountryBtn">
+                  Czech Republic
+                </button>
+                <button class="details__borderCountryBtn">Austria</button>
+                <button class="details__borderCountryBtn">Switzerland</button>
+                <button class="details__borderCountryBtn">France</button>
+                <button class="details__borderCountryBtn">Belgium</button>
+                <button class="details__borderCountryBtn">Netherlands</button>
+                <button class="details__borderCountryBtn">Denmark</button>
+              </div>
+            </section>
+          </div>
+        </div>
+      </article>
     </main>
-</body>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
