Do some fixes and add spinng icon

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rest Countries API</title>
     <link rel="stylesheet" href="./scss/main.scss" />
-    <script defer src="./js/main.js"></script>
+    <script defer type="module" src="./js/main.js"></script>
   </head>
   <body>
     <header class="header">
@@ -62,200 +62,9 @@
             </div>
           </fieldset>
         </div>
-        <!-- <div class="main__homeContent">
-          <div tabindex="0" class="country">
-            <img
-              class="country__flag"
-              src="./Flag_of_Germany.svg.webp"
-              alt=""
-            />
-            <article class="country__infoContainer">
-              <h2 class="country__name">Germany</h2>
-              <p class="country__info">
-                Population:
-                <span class="country__population country__infoData">
-                  81,770,900
-                </span>
-              </p>
-              <p class="country__info">
-                Region:
-                <span class="country__region country__infoData"> Europe </span>
-              </p>
-              <p class="country__info">
-                Capital:
-                <span class="country__capital country__infoData"> Berlin </span>
-              </p>
-            </article>
-          </div>
-          <div tabindex="0" class="country">
-            <img
-              class="country__flag"
-              src="./Flag_of_Germany.svg.webp"
-              alt=""
-            />
-            <article class="country__infoContainer">
-              <h2 class="country__name">Germany</h2>
-              <p class="country__info">
-                Population:
-                <span class="country__population country__infoData">
-                  81,770,900
-                </span>
-              </p>
-              <p class="country__info">
-                Region:
-                <span class="country__region country__infoData"> Europe </span>
-              </p>
-              <p class="country__info">
-                Capital:
-                <span class="country__capital country__infoData"> Berlin </span>
-              </p>
-            </article>
-          </div>
-          <div tabindex="0" class="country">
-            <img
-              class="country__flag"
-              src="./Flag_of_Germany.svg.webp"
-              alt=""
-            />
-            <article class="country__infoContainer">
-              <h2 class="country__name">Germany</h2>
-              <p class="country__info">
-                Population:
-                <span class="country__population country__infoData">
-                  81,770,900
-                </span>
-              </p>
-              <p class="country__info">
-                Region:
-                <span class="country__region country__infoData"> Europe </span>
-              </p>
-              <p class="country__info">
-                Capital:
-                <span class="country__capital country__infoData"> Berlin </span>
-              </p>
-            </article>
-          </div>
-          <div tabindex="0" class="country">
-            <img
-              class="country__flag"
-              src="./Flag_of_Germany.svg.webp"
-              alt=""
-            />
-            <article class="country__infoContainer">
-              <h2 class="country__name">Germany</h2>
-              <p class="country__info">
-                Population:
-                <span class="country__population country__infoData">
-                  81,770,900
-                </span>
-              </p>
-              <p class="country__info">
-                Region:
-                <span class="country__region country__infoData"> Europe </span>
-              </p>
-              <p class="country__info">
-                Capital:
-                <span class="country__capital country__infoData"> Berlin </span>
-              </p>
-            </article>
-          </div>
-          <div tabindex="0" class="country">
-            <img
-              class="country__flag"
-              src="./Flag_of_Germany.svg.webp"
-              alt=""
-            />
-            <article class="country__infoContainer">
-              <h2 class="country__name">Germany</h2>
-              <p class="country__info">
-                Population:
-                <span class="country__population country__infoData">
-                  81,770,900
-                </span>
-              </p>
-              <p class="country__info">
-                Region:
-                <span class="country__region country__infoData"> Europe </span>
-              </p>
-              <p class="country__info">
-                Capital:
-                <span class="country__capital country__infoData"> Berlin </span>
-              </p>
-            </article>
-          </div>
-          <div tabindex="0" class="country">
-            <img
-              class="country__flag"
-              src="./Flag_of_Germany.svg.webp"
-              alt=""
-            />
-            <article class="country__infoContainer">
-              <h2 class="country__name">Germany</h2>
-              <p class="country__info">
-                Population:
-                <span class="country__population country__infoData">
-                  81,770,900
-                </span>
-              </p>
-              <p class="country__info">
-                Region:
-                <span class="country__region country__infoData"> Europe </span>
-              </p>
-              <p class="country__info">
-                Capital:
-                <span class="country__capital country__infoData"> Berlin </span>
-              </p>
-            </article>
-          </div>
-          <div tabindex="0" class="country">
-            <img
-              class="country__flag"
-              src="./Flag_of_Germany.svg.webp"
-              alt=""
-            />
-            <article class="country__infoContainer">
-              <h2 class="country__name">Germany</h2>
-              <p class="country__info">
-                Population:
-                <span class="country__population country__infoData">
-                  81,770,900
-                </span>
-              </p>
-              <p class="country__info">
-                Region:
-                <span class="country__region country__infoData"> Europe </span>
-              </p>
-              <p class="country__info">
-                Capital:
-                <span class="country__capital country__infoData"> Berlin </span>
-              </p>
-            </article>
-          </div>
-          <div tabindex="0" class="country">
-            <img
-              class="country__flag"
-              src="./Flag_of_Germany.svg.webp"
-              alt=""
-            />
-            <article class="country__infoContainer">
-              <h2 class="country__name">Germany</h2>
-              <p class="country__info">
-                Population:
-                <span class="country__population country__infoData">
-                  81,770,900
-                </span>
-              </p>
-              <p class="country__info">
-                Region:
-                <span class="country__region country__infoData"> Europe </span>
-              </p>
-              <p class="country__info">
-                Capital:
-                <span class="country__capital country__infoData"> Berlin </span>
-              </p>
-            </article>
-          </div>
-        </div> -->
+        <div class="main__homeContent">
+          <ion-icon class="main__homeContentSpin" name="sync"></ion-icon>
+        </div>
       </article>
       <article class="main__details main__details--hide">
         <button class="main__detailsBackBtn">
@@ -265,7 +74,7 @@
           ></ion-icon>
           Back
         </button>
-        <div class="details">
+        <section class="details">
           <img class="details__img" src="./Flag_of_Germany.svg.webp" alt="" />
           <div class="details__data">
             <header class="details__header">
@@ -273,47 +82,47 @@
             </header>
             <article class="details__info">
               <div>
-                <p class="country__info">
+                <p class="country__detailsInfo country__info">
                   Native Name:
-                  <span class="country__nativeName country__infoData"
+                  <span class="country__detailsInfoData country__infoData"
                     >Deutschland</span
                   >
                 </p>
-                <p class="country__info">
+                <p class="country__detailsInfo country__info">
                   Population:
-                  <span class="country__population country__infoData"
+                  <span class="country__detailsInfoData country__infoData"
                     >81,770,900</span
                   >
                 </p>
-                <p class="country__info">
+                <p class="country__detailsInfo country__info">
                   Region:
-                  <span class="country__region country__infoData">Europe</span>
+                  <span class="country__detailsInfoData country__infoData">Europe</span>
                 </p>
-                <p class="country__info">
+                <p class="country__detailsInfo country__info">
                   Sub Region:
-                  <span class="country__subRegion country__infoData"
+                  <span class="country__detailsInfoData country__infoData"
                     >Western Europe</span
                   >
                 </p>
-                <p class="country__info">
+                <p class="country__detailsInfo country__info">
                   Capital:
-                  <span class="country__capital country__infoData">Berlin</span>
+                  <span class="country__detailsInfoData country__infoData">Berlin</span>
                 </p>
               </div>
               <div>
-                <p class="country__info">
+                <p class="country__detailsInfo country__info">
                   Top Level Domain:
-                  <span class="country__domain country__infoData">.de</span>
+                  <span class="country__detailsInfoData country__infoData">.de</span>
                 </p>
-                <p class="country__info">
+                <p class="country__detailsInfo country__info">
                   Currencies:
-                  <span class="country__currencies country__infoData"
+                  <span class="country__detailsInfoData country__infoData"
                     >Euro</span
                   >
                 </p>
-                <p class="country__info">
+                <p class="country__detailsInfo country__info">
                   Languages:
-                  <span class="country__languages country__infoData"
+                  <span class="country__detailsInfoData country__infoData"
                     >German, German, German</span
                   >
                 </p>
@@ -321,21 +130,11 @@
             </article>
             <section class="details__borderCountries">
               <h3 class="details__borderCountriesTitle">Border Countries:</h3>
-              <div class="details__borderCountriesBtns">
-                <button class="details__borderCountryBtn">Poland</button>
-                <button class="details__borderCountryBtn">
-                  Czech Republic
-                </button>
-                <button class="details__borderCountryBtn">Austria</button>
-                <button class="details__borderCountryBtn">Switzerland</button>
-                <button class="details__borderCountryBtn">France</button>
-                <button class="details__borderCountryBtn">Belgium</button>
-                <button class="details__borderCountryBtn">Netherlands</button>
-                <button class="details__borderCountryBtn">Denmark</button>
-              </div>
+              <p class="details__message details__message--hide">There aren't</p>
+              <div class="details__borderCountriesBtns"></div>
             </section>
           </div>
-        </div>
+        </section>
       </article>
     </main>
     <script
