Do some fixes and add spinng icon in html file

--- a/src/index.html
+++ b/src/index.html
@@ -75,62 +75,70 @@
           Back
         </button>
         <section class="details">
-          <img class="details__img" src="./Flag_of_Germany.svg.webp" alt="" />
+          <img class="details__img" src="" alt="" />
           <div class="details__data">
             <header class="details__header">
-              <h2 class="details__name country__name">Germany</h2>
+              <h2 class="details__name country__name"></h2>
             </header>
             <article class="details__info">
               <div>
                 <p class="country__detailsInfo country__info">
                   Native Name:
-                  <span class="country__detailsInfoData country__infoData"
-                    >Deutschland</span
-                  >
+                  <span
+                    class="country__detailsInfoData country__infoData"
+                  ></span>
                 </p>
                 <p class="country__detailsInfo country__info">
                   Population:
-                  <span class="country__detailsInfoData country__infoData"
-                    >81,770,900</span
-                  >
+                  <span
+                    class="country__detailsInfoData country__infoData"
+                  ></span>
                 </p>
                 <p class="country__detailsInfo country__info">
                   Region:
-                  <span class="country__detailsInfoData country__infoData">Europe</span>
+                  <span
+                    class="country__detailsInfoData country__infoData"
+                  ></span>
                 </p>
                 <p class="country__detailsInfo country__info">
                   Sub Region:
-                  <span class="country__detailsInfoData country__infoData"
-                    >Western Europe</span
-                  >
+                  <span
+                    class="country__detailsInfoData country__infoData"
+                  ></span>
                 </p>
                 <p class="country__detailsInfo country__info">
                   Capital:
-                  <span class="country__detailsInfoData country__infoData">Berlin</span>
+                  <span
+                    class="country__detailsInfoData country__infoData"
+                  ></span>
                 </p>
               </div>
               <div>
                 <p class="country__detailsInfo country__info">
                   Top Level Domain:
-                  <span class="country__detailsInfoData country__infoData">.de</span>
+                  <span
+                    class="country__detailsInfoData country__infoData"
+                  ></span>
                 </p>
                 <p class="country__detailsInfo country__info">
                   Currencies:
-                  <span class="country__detailsInfoData country__infoData"
-                    >Euro</span
-                  >
+                  <span
+                    class="country__detailsInfoData country__infoData"
+                  ></span>
                 </p>
                 <p class="country__detailsInfo country__info">
                   Languages:
-                  <span class="country__detailsInfoData country__infoData"
-                    >German, German, German</span
-                  >
+                  <span
+                    class="country__detailsInfoData country__infoData"
+                  ></span>
                 </p>
               </div>
             </article>
             <section class="details__borderCountries">
               <h3 class="details__borderCountriesTitle">Border Countries:</h3>
-              <p class="details__message details__message--hide">There aren't</p>
+              <p class="details__message details__message--hide">
+                There aren't
+              </p>
               <div class="details__borderCountriesBtns"></div>
             </section>
           </div>
