--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,12 @@
           class="header__changeThemeBtnIcon"
           name="moon-outline"
         ></ion-icon>
-        <!-- <ion-icon name="moon"></ion-icon> -->
         Dark mode
       </button>
     </header>
     <main class="main">
       <article class="main__home">
-        <div class="main__homeInputs">
+        <section class="main__homeInputs">
           <fieldset class="field">
             <label class="field__label" for="searchCountries"
               >Search country</label
@@ -61,10 +60,10 @@
               </ul>
             </div>
           </fieldset>
-        </div>
-        <div class="main__homeContent">
+        </section>
+        <section class="main__homeContent">
           <ion-icon class="main__homeContentSpin" name="sync"></ion-icon>
-        </div>
+        </section>
       </article>
       <article class="main__details main__details--hide">
         <button class="main__detailsBackBtn">
@@ -137,7 +136,7 @@
             <section class="details__borderCountries">
               <h3 class="details__borderCountriesTitle">Border Countries:</h3>
               <p class="details__message details__message--hide">
-                There aren't
+                Does not have
               </p>
               <div class="details__borderCountriesBtns"></div>
             </section>
