Format index.html

--- a/src/index.html
+++ b/src/index.html
@@ -43,19 +43,19 @@
               <button class="field__filterSelect">Filter by Region</button>
               <ul class="field__filterUl field__filterUl--hide">
                 <li class="field__filterLi">
-                  <button role="radio" class="field__filterBtn">Africa</button>
+                  <button role="option" class="field__filterBtn">Africa</button>
                 </li>
                 <li class="field__filterLi">
-                  <button role="radio" class="field__filterBtn">America</button>
+                  <button role="option" class="field__filterBtn">America</button>
                 </li>
                 <li class="field__filterLi">
-                  <button role="radio" class="field__filterBtn">Asia</button>
+                  <button role="option" class="field__filterBtn">Asia</button>
                 </li>
                 <li class="field__filterLi">
-                  <button role="radio" class="field__filterBtn">Europe</button>
+                  <button role="option" class="field__filterBtn">Europe</button>
                 </li>
                 <li class="field__filterLi">
-                  <button role="radio" class="field__filterBtn">Oceania</button>
+                  <button role="option" class="field__filterBtn">Oceania</button>
                 </li>
               </ul>
             </div>
